hphp/hack/test/typecheck/function_hint_with_variadic_parameter_not_covariant_1.php.exp
File "function_hint_with_variadic_parameter_not_covariant_1.php", line 12, characters 17-33:
Invalid argument (Typing[4110])
File "function_hint_with_variadic_parameter_not_covariant_1.php", line 7, characters 26-27:
Expected B (variadic argument)
File "function_hint_with_variadic_parameter_not_covariant_1.php", line 9, characters 34-34:
But got A
